use of Java records for value objects